<resources>
    <string name="link">Đăng ký ngay</string>
    <string name="app_name">Do_An</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="app_name_main">1996 Store</string>
    <string name="slogan">GIÀY THỂ THAO CHÍNH HÃNG</string>

    <!--Manager-->
    <string name="quan_ly_don_hang">Quản lý đơn hàng</string>
    <string name="quan_ly_san_pham">Quản lý sản phẩm</string>
    <string name="quan_ly_thanh_vien">Quản lý thành viên</string>
    <string name="quan_ly_loai_san_pham">Quản lý loại sản phẩm</string>
    <string name="quan_ly_doanh_thu">Quản lý doanh thu</string>
    <string name="quan_ly_giao_dien">Quản lý giao diện</string>
    <!--Manager Product-->
    <string name="them_san_pham_moi">Thêm sản phẩm mới</string>
    <string name="chi_tiet_san_pham">Chi tiết sản phẩm</string>
    <!--Manager User-->
    <string name="them_user">Thêm thành viên mới</string>
    <!--Manager Category-->
    <string name="them_category">Thêm loại sản phẩm mới</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>