<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GUI.Common.MainActivity"
    android:orientation="vertical"
    tools:ignore="MissingDefaultResource">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/orange"
        android:orientation="horizontal"
        android:gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:src="@drawable/ic_baseline_admin_panel_settings_24"></ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ADMINISTRATOR"
            android:textSize="32dp"
            android:textColor="@color/white"></TextView>
    </LinearLayout>

    //Action
    <LinearLayout
        style="@style/item_manager_linearLayout">
        <Button
            style="@style/item_manager_button"
            android:id="@+id/btn_managerOrder"
            android:backgroundTint="#7B7E78"
            android:layout_marginRight="10dp"
            android:drawableLeft="@drawable/order_icon"
            android:text="@string/quan_ly_don_hang"></Button>
        <Button
            style="@style/item_manager_button"
            android:id="@+id/btn_managerProduct"
            android:backgroundTint="#1D6111"
            android:drawableLeft="@drawable/product_icon"
            android:text="@string/quan_ly_san_pham"></Button>
    </LinearLayout>
    <LinearLayout
        style="@style/item_manager_linearLayout">
        <Button
            style="@style/item_manager_button"
            android:id="@+id/btn_managerUser"
            android:backgroundTint="#3A4DB3"
            android:layout_marginRight="10dp"
            android:drawableLeft="@drawable/user_manager_icon"
            android:text="@string/quan_ly_thanh_vien"></Button>
        <Button
            style="@style/item_manager_button"
            android:id="@+id/btn_managerCategory"
            android:backgroundTint="#9B32A3"
            android:drawableLeft="@drawable/category_icon"
            android:text="@string/quan_ly_loai_san_pham"></Button>
    </LinearLayout>
    <LinearLayout
        style="@style/item_manager_linearLayout">
        <Button
            style="@style/item_manager_button"
            android:id="@+id/btn_managerIncome"
            android:backgroundTint="@color/teal_700"
            android:layout_marginRight="10dp"
            android:drawableLeft="@drawable/income_icon"
            android:text="@string/quan_ly_doanh_thu"></Button>
        <Button
            style="@style/item_manager_button"
            android:id="@+id/btn_managerTheme"
            android:backgroundTint="#AC184C"
            android:drawableLeft="@drawable/ic_baseline_article_38"
            android:text="@string/quan_ly_giao_dien"></Button>
    </LinearLayout>

</LinearLayout>